--- a/main.tex
+++ b/main.tex
@@ -398,29 +398,32 @@ Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, su
 
 \section{Wedge Product and Perpendicularity}
 
-Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric; that is, by flipping the order of the components, the magnitude remains the same, but the orientation flips. The tool that does this is the \textbf{wedge product}.
+Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane. This plane is effectively $\vec{x} \wedge \vec{y}$, where the $\vec{x}$ is traditionally the horizontal, and $\vec{y}$ the vertical. Switch now $\vec{x}$ and $\vec{y}$, so that $\vec{x}$ is now the vertical, and $\vec{y}$ is now the horizontal. This plane is now $\vec{y} \wedge \vec{x}$. It is impossible to go from $\vec{y} \wedge \vec{x}$ back to $\vec{x} \wedge \vec{y}$ purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning $\vec{x} \to -\vec{x}$, or $\vec{y} \to -\vec{y}$. Once that is done, the original $\vec{x} \wedge \vec{y}$ can be reached. Thus, we have that $\vec{x} \wedge \vec{y} = -\vec{y} \wedge \vec{x}$. . The tool that does this is the \textbf{wedge product}.
 
-
+\textbf{Rotating gives different vectors, so trying to use this sort of notation here will get it harder to see. Need a picture}
 
 \begin{defn}
 	
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
 
-The antisymmetric property of the wedge product is not an arbitrary, ad hoc condition. To see why it must be this way, consider an x-y plane. This plane is effectively $\vec{x} \wedge \vec{y}$, where the $\vec{x}$ is traditionally the horizontal, and $\vec{y}$ the vertical. Switch now $\vec{x}$ and $\vec{y}$, so that $\vec{x}$ is now the vertical, and $\vec{y}$ is now the horizontal. This plane is now $\vec{y} \wedge \vec{x}$. It is impossible to go from $\vec{y} \wedge \vec{x}$ back to $\vec{x} \wedge \vec{y}$ purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning $\vec{x} \to -\vec{x}$, or $\vec{y} \to -\vec{y}$. Once that is done, the original $\vec{x} \wedge \vec{y}$ can be reached. Thus, we have that $\vec{x} \wedge \vec{y} = -\vec{y} \wedge \vec{x}$. 
+
+
+
 	
  This discussion of joining vectors together and resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B_x \hat{x} + B_y \hat{y} + B_z \hat{z}$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B_{yz} \hat{y}\wedge\hat{z} + B_{xz} \hat{x}\wedge\hat{z} + B_{xy} \hat{x}\wedge\hat{y}$. This notation should bring to mind the electromagnetic field tensor, $F^{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond. 
  
  Another issue with the cross product is that it requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we do not yet have defined, and is beyond the scope of what we're doing here. For our purposes here, because we are striving for generality in describing physical systems, we will be focusing our attention on the wedge product, rather than the cross product. 
 
+\textbf{Frame the fact that our tools are more general as a positive. In this paragraph, it almost sounds as a negative. It should be good that our tools are more general}
 
 
-
-
+\textbf{Give a line here giving the intuition for why k-vectors can be decomposed in this way}
+\textbf{Use different letters in the wedge product, this notation I'm using is confusing}
 Any k-vector can be expressed as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = v^1\wedge v^2 \wedge v^3 \wedge ... \wedge v^n$, where each of the component vectors are in $V^1$. More concisely, this can be written in a product series form as $\wedge^n_{i=1} v^i$. We can therefore see k-forms as alternating functions on k 1-vectors. That is, we write $\omega_k(v^k) = \omega_k(v^1\wedge v^2 \wedge v^3 \wedge ... \wedge v^n) = \omega_k(\wedge^n_{i=1}v^i)$. Flipping the order of any of these products will introduce a minus in the overall product, hence "alternating function." 
 
 
-
+\textbf{Need a proposition that the k-form is an alternating function of k 1-forms, and the definition of the wedge product on forms, which lets you create "volume forms" from "area forms"}
 
 
 
@@ -439,14 +442,15 @@ Up until this point in our discussion of k-forms and k-vectors, we've remained i
 Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $dP$ be an infinitesimal segment starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $dP$. Mathematically, this relates to defining the coordinate system in terms of the \textbf{basis}, and assigning $dP$ directional components  along each basis vector, the sum of which gives us $dP$. So, \begin{gather}dP = dx^i \frac{\partial P}{\partial x^i} = dx^i e_i,\end{gather} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis.\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$} In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
 
 
+\textbf{Use lower indices in this definiiton, then define the co-basis, then define how they relate to each other}
 \begin{defn}
 	The \textbf{basis} of a space are a set of linearly independent directions such that any element of that space may be constructed using the basis vectors. In $\mathbb{R}^3$ using Cartesian coordinates, the basis vectors are equivalently $(e^1, e^2, e^3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. We can see from (2.16) that the basis can be thought of as a ratio between differentials and infinitesimal segments. 
 \end{defn}
 
 
 
-
-Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ be a vector. Then $\omega(dP)$ is a linear function of the coordinate differences along $dP$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial P} = \omega_i e^i$ where each $e^i$ is a basis covector. In fact, $e^i(dP) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
+\textbf{Need to say what the $e_i$s are, say like $e_i e^j = \delta_i^j$}
+Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ be a vector. Then $\omega(dP)$ is a linear function of the coordinate differences along $dP$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial P} = \omega_i e^i$ where each $e^i$ is a basis covector.  $e^i(dP) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
 
 
 Putting everything together now, for vector dP and k-form $\omega$, $\omega(dP) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
@@ -460,6 +464,8 @@ Working in a space with specified coordinates allows us to solve real problems. 
 
 Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say where it lies with respect to coordinate system $Q'$. 
 
+\textbf{Just use the $e^i$ notation during the expansions, it makes things easier}
+\textbf{Fix up the language. Also, covectors, vectors, and tensors are invariant. The components are what change}
 So, suppose we have a covector $\omega = \omega_i \frac{\partial x^i}{\partial P}$. $x^i$ is the thing that describes this covector relative to a specific coordinate system, which we will call $Q$. Suppose now we have coordinate system $Q'$. We can transform $\omega$ to $\omega'$ by writing \begin{gather}\omega' = \omega_j \frac{\partial x^i}{\partial P} \frac{\partial x'^j}{\partial x^i} = \omega \frac{\partial x'^j}{\partial x^i}.\end{gather} Similarly, a vector $v$ will transform to $v'$ as $v' = v \frac{\partial x^i}{\partial x'^j}$. 
 
 \textbf{Clean up this derivation, it's not quite right. Notes are in overleaf}
@@ -482,6 +488,7 @@ In general, an object that has such a relationship with objects in other coordin
 	If a tensor $X = 0$ in coordinate system Q, then $X' = 0$ in any other coordinate system $Q'$. This follows immediately from the transformation rules. 
 \end{coro}
 
+\textbf{Review this paragraph, it's not clear what the argument here is. Just say that "another way of thinking of tensors is this way, and this is more standard in math"}
 Other treatments of differential geometry in physics (such as Wald's ``General Relativity") define tensors foremost as multilinear mappings onto $\mathbb{R}$. That is, our defining feature of k-forms and covectors is used as the definition of tensors in general. What this means is that just as we can define $\omega_k \in \Omega_k : V^k \to \mathbb{R}$ as a function on k-vectors, we can define $v^k \in V^k : \Omega_k \to \mathbb{R}$ as a function on k-forms. In other words, k-forms are functions that take k-vectors to $\mathbb{R}$, and k-vectors are functions that take k-forms to $\mathbb{R}$. 
 
 \begin{defn}
@@ -494,6 +501,10 @@ From a mathematical perspective, this is entirely valid, and does not detract fr
 
 \section{Stokes' Theorem}
 
+\textbf{Make sure that this a parallel to the section on the finite case}
+
+\textbf{STart here with a "recall that we discussed this before", since at this point we're not doing anything new}
+
 Suppose we have a volume $\sigma^3 \in S^3$ (such as a sphere) with some source of flow $\omega_2 \in \Omega_2$ enclosed by the sphere, and 2-functional $f_2 \in F^2$ such that for $\sigma^2 \in S^2$, \begin{gather}f_2(\sigma^2) = \int_{\sigma^2} \omega_2(d\sigma^2).\end{gather} $\omega_2$ cannot operate on $\sigma^3$, as $\sigma^3$ is in $S^3$, and $\omega_2$ is in $\Omega_2$. That is, it cannot return the flux through infinitesimal bits of the sphere. What it \emph{can} do, however, is return the flux through infinitesimal bits of the \emph{surface} of the sphere: $\partial \sigma^3 \in S^2$. We can write then \begin{gather}f_2(\partial\sigma^3) = \int_{\partial\sigma^3} \omega_2 (d\partial\sigma^3).\end{gather} Recalling Definition 1.14, we know that \begin{gather}f_2(\partial\sigma^3) = \eth f_2(\sigma^3).\end{gather} And furthermore, \begin{gather}\eth f_2(\sigma^3) = \int_{\sigma^3} \eth\omega_2(d\sigma^3).\end{gather} Therefore, we have \begin{gather}\int_{\partial \sigma^3} \omega_2(d\partial\sigma^3) = \int_{\sigma^3} \eth \omega_2(d\sigma^3).\end{gather} So, if we are able to calculate the flux through a surface, we define $\eth$ to be the operator that allows us to calculate the flux through a volume. 
 
 \textbf{As examples: we start with a force (a function of a line), and we can get work. From that we can create a functional that given a surface, takes the boundary and returns the work to go around the boundary. And if the force is conservative, then you get zero. So the functional applied to the surface always will be zero. Saying that the force is conservative is equivalent to saying that this higher dimensional functional is the zero functional. So now we want a relationship that's local. Instead of having a condition on the integral, we want a condition on the differential at the point (local). The idea is that since we know for any functional there is a form, we want to understand what's the k-functional with the k-form}
@@ -504,6 +515,8 @@ There are two very important results drawn from this derivation. First, we now h
 
 
 \textbf{Not meaningful. Talk about it with boundaries and such.}
+
+\textbf{Make clear: we have k-functional, and boundary on k-functional. We have the form associated with the k-functional. }
 \begin{defn}
 	$\eth : \Omega_k \to \Omega_{k+1}$ is the \textbf{exterior derivative} on k-forms, such that for k-surface $\sigma$ and (k-1)-functional $f$ with associated (k-1)-form $\omega$, 
 	
@@ -540,7 +553,9 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 
 - Remake this diagram using tikz
 
+\textbf{Remake stokes' theorem to be a corollary of the definition. Need: defn for exterior derivative as the form associated with the boundary functional. Stokes' theorem is now just an equivalence between the boundary functional on a surface and the functional on the interior. Then, we need a proposition which basically gives (2.34)}
 
+\textbf{Maybe don't even talk about stokes' theorem. Just say we have the exterior derivative, and we have this relationship. Then give it in terms of components, then say when integrating (2.34), we're essentially integrating one side away. Then show how this stuff works in 1,2,3D}
 
 \begin{defn}
 	\textbf{Stokes' Theorem}: For (k-1)-form $\omega$ and k-surface $\sigma$, $\int_{\partial \sigma}\omega = \int_{\sigma}\eth\omega$. \textbf{NOTE: We kinda already gave this definition in the exterior derivative deifnition. It's kinda funny. We can handle this two ways: define the exterior derivative as being an operation that does the thing, and have stoke's theorem be waht the exterior derivative does. }
@@ -551,10 +566,14 @@ In many treatments of Electromagnetism (for example, "Classical Electromagnetic 
 \textbf{Introduce this wedge-product formulation of the k-form before this}
 
 In general, we have that for $\omega_k \in \Omega_k$, \begin{gather}\omega_k = \omega_{ab...c}e^a\wedge e^b \wedge ... \wedge e^c,\end{gather} and \begin{gather} \eth \omega_k = \partial_a\omega_{bc...d}e^a\wedge e^b\wedge e^c\wedge ... \wedge e^d.\end{gather} So, suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that \begin{gather}\eth f = \partial_a f e^a,\end{gather} \begin{gather}\eth v = \partial_a v_b e^a \wedge e^b,\end{gather} and \begin{gather}\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c.\end{gather} 
+\textbf{Explicitly show the algebra for (2.40), also be careful that there aren't any extraneous numbers coming into play. Just say for (2.41) "this follows from a similar procedure}
 
 By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that \begin{gather}\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3.\end{gather} This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, \begin{gather}\partial_a f e^a = \nabla f.\end{gather} Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$, \begin{gather}\eth v = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2.\end{gather} Finally, \begin{gather} \eth B = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3.\end{gather} We see here that $\eth v$ doesn't \emph{quite} give us $\nabla \times v$, and $\eth B$ doesn't \emph{quite} give us $\nabla \cdot B$. This discrepancy demonstrates the difference between the wedge product and the cross product. Had we done $\nabla \times v$, the first term would have been $(\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^1$. That is, in the direction perpendicular to $e^2\wedge e^3$. This is similarly true for the components in $e^1\wedge e^3$ and $e^1 \wedge e^2$. Furthermore, $\nabla \cdot B$ returns a scalar (i.e., no direction), while $\eth B$ returns a single value in the $e^1 \wedge e^2 \wedge e^3$ "direction." This discrepancy is resolved by the introduction of the Hodge Dual Operator $*$, such that $*\eth v = \nabla \times v$ and $*\eth B = \nabla \cdot B$, but this is beyond us at the moment. What does hold immediately true is a generalization of the expression \begin{gather} \nabla \times \nabla V = 0\end{gather} for any scalar function $V$. For any form $\omega_k \in \Omega_k$, we have that \begin{gather} \eth\eth\omega_k = 0.\end{gather}
 
+\textbf{The scalar is actually a pseudoscalar. B is a pseudovector because it was associated with a surface: flip the surface and you get a minus sign. By flipping a volume, you get a minus sign, hence why the scalar is a pseudoscalar.}
+
 You may be asking now, "But what about $\nabla \times \nabla \times B$ for $B \in \Omega_1$? This gives us $\nabla (\nabla \cdot B) - \nabla^2 B$, which certainly isn't zero in general. Didn't we show just that curl is really just the exterior derivative of a one-form?" The issue is, once again, that the exterior derivative of a one form isn't \emph{quite} the same thing as a curl of a vector field. This discrepancy arises because of the difference between the wedge product $\wedge$ and the cross product $\times$. For two vectors $a$ and $b$, $a \times b$ gives a vector perpendicular to the two of them, while the wedge product deals only with the two original tangent vectors. 
+\textbf{We can sstart the discussion of potentials, closed, and exact here. Or move this to the next section}
 
 With these new, more general geometric expressions for gradient, curl, and divergence, their physical interpretations become immediately clear, simply from the notation. If we extend the flux example, we see that the gradient of a 0-form is simply the lengthwise flow in each possible dimension (three, in 3D), the curl of a 1-form is the planewise flow in each plane (still 3, in 3D), and the divergence of a 2-form is the flow outwards from a point per unit volume. 
 
